Short Excess Register

--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -240,3 +240,6 @@ model.inventory.views.FGStockVO_LABEL=Fg Stock Vo
 model.inventory.views.DailyStockStatementVO_LABEL=Daily Stock Statement Vo
 common.viwes.DailyStockStatement_LocationFilterVVO_LABEL=Daily Stock Statement Location Filter Vvo
 model.inventory.views.ApprovedPurchaseIndentVO_LABEL=Approved Purchase Indent Vo
+model.inventory.views.ShortExcessRegisterVO_LABEL=Short Excess Register Vo
+common.viwes.ShortExcessRegister_RepTypeVVO_LABEL=Short Excess Register Rep Type Vvo
+LOV_ShortExcessRegister_RepType_LOVUIHints_NullValueId=--Select--
