Summary of Dispatch report
Summary of Dispatch report

--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -243,3 +243,4 @@ model.inventory.views.ApprovedPurchaseIndentVO_LABEL=Approved Purchase Indent Vo
 model.inventory.views.ShortExcessRegisterVO_LABEL=Short Excess Register Vo
 common.viwes.ShortExcessRegister_RepTypeVVO_LABEL=Short Excess Register Rep Type Vvo
 LOV_ShortExcessRegister_RepType_LOVUIHints_NullValueId=--Select--
+model.sale.views.SummaryOfDispatchVO_LABEL=Summary Of Dispatch Vo
