--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -244,3 +244,5 @@ model.inventory.views.ShortExcessRegisterVO_LABEL=Short Excess Register Vo
 common.viwes.ShortExcessRegister_RepTypeVVO_LABEL=Short Excess Register Rep Type Vvo
 LOV_ShortExcessRegister_RepType_LOVUIHints_NullValueId=--Select--
 model.sale.views.SummaryOfDispatchVO_LABEL=Summary Of Dispatch Vo
+model.sale.views.MonthlyPackingSummaryVO_LABEL=Monthly Packing Summary Vo
+common.viwes.MonthlyPackingSummary_CategaryCdVVO_LABEL=Monthly Packing Summary Vvo
