Sale Order V/s Dispatch report
Sale Order V/s Dispatch report

--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -246,3 +246,4 @@ LOV_ShortExcessRegister_RepType_LOVUIHints_NullValueId=--Select--
 model.sale.views.SummaryOfDispatchVO_LABEL=Summary Of Dispatch Vo
 model.sale.views.MonthlyPackingSummaryVO_LABEL=Monthly Packing Summary Vo
 common.viwes.MonthlyPackingSummary_CategaryCdVVO_LABEL=Monthly Packing Summary Vvo
+model.sale.views.SaleOrderVsDispatchVO_LABEL=Sale Order Vs Dispatch Vo
