--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -247,3 +247,7 @@ model.sale.views.SummaryOfDispatchVO_LABEL=Summary Of Dispatch Vo
 model.sale.views.MonthlyPackingSummaryVO_LABEL=Monthly Packing Summary Vo
 common.viwes.MonthlyPackingSummary_CategaryCdVVO_LABEL=Monthly Packing Summary Vvo
 model.sale.views.SaleOrderVsDispatchVO_LABEL=Sale Order Vs Dispatch Vo
+model.inventory.views.PendingReturnGatePassVO_LABEL=Pending Return Gate Pass Vo
+model.finance.views.FinancialTransactionsVO_LABEL=Financial Transactions Vo
+model.finance.views.MonthWisetotalTransactionsVO_LABEL=Month Wisetotal Transactions Vo
+model.finance.views.FintransactionMonthwiseLink_LABEL=Fintransaction Monthwise Link
