Transactions of the Month & Voucher Detail report
Transactions of the Month & Voucher Details report Linked with Financial Transactions report.

--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -251,3 +251,5 @@ model.inventory.views.PendingReturnGatePassVO_LABEL=Pending Return Gate Pass Vo
 model.finance.views.FinancialTransactionsVO_LABEL=Financial Transactions Vo
 model.finance.views.MonthWisetotalTransactionsVO_LABEL=Month Wisetotal Transactions Vo
 model.finance.views.FintransactionMonthwiseLink_LABEL=Fintransaction Monthwise Link
+model.finance.views.TransactionsoftheMonthVO_LABEL=Transactionsofthe Month Vo
+model.finance.views.VoucherDetailreportVO_LABEL=Voucher Detailreport Vo
