Pending Debit Notes and Pending Purchase and Service Bills
Pending Debit Notes and Pending Purchase and Service Bills report has developed on financial Transaction page.

--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -253,3 +253,5 @@ model.finance.views.MonthWisetotalTransactionsVO_LABEL=Month Wisetotal Transacti
 model.finance.views.FintransactionMonthwiseLink_LABEL=Fintransaction Monthwise Link
 model.finance.views.TransactionsoftheMonthVO_LABEL=Transactionsofthe Month Vo
 model.finance.views.VoucherDetailreportVO_LABEL=Voucher Detailreport Vo
+model.finance.views.PendingDebitNotesVO_LABEL=Pending Debit Notes Vo
+model.finance.views.PendingPurchaseandServiceBillsVO_LABEL=Pending Purchaseand Service Bills Vo
