--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -255,3 +255,10 @@ model.finance.views.TransactionsoftheMonthVO_LABEL=Transactionsofthe Month Vo
 model.finance.views.VoucherDetailreportVO_LABEL=Voucher Detailreport Vo
 model.finance.views.PendingDebitNotesVO_LABEL=Pending Debit Notes Vo
 model.finance.views.PendingPurchaseandServiceBillsVO_LABEL=Pending Purchaseand Service Bills Vo
+common.viwes.AR_UnitVVO_LABEL=Ar Unit Vvo
+common.viwes.AR_LocationVVO_LABEL=Ar Location Vvo
+common.viwes.AR_GROUPVVO_LABEL=Ar Groupvvo
+common.viwes.AR_SubGroupVVO_LABEL=Ar Sub Group Vvo
+common.viwes.AR_ITEMVVO_LABEL=Ar Itemvvo
+common.viwes.AR_AR_NOVVO_LABEL=Ar Ar Novvo
+common.viwes.Sec_Control_ValuesVVO_LABEL=Sec Control Values Vvo
