SRV Detail Bean
SRV Detail Bean and Report Alignment Changes.

--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -262,3 +262,5 @@ common.viwes.AR_SubGroupVVO_LABEL=Ar Sub Group Vvo
 common.viwes.AR_ITEMVVO_LABEL=Ar Itemvvo
 common.viwes.AR_AR_NOVVO_LABEL=Ar Ar Novvo
 common.viwes.Sec_Control_ValuesVVO_LABEL=Sec Control Values Vvo
+common.viwes.Bulk_IssueSlipNoVVO_LABEL=Bulk Issue Slip No Vvo
+common.viwes.Bulk_ItemNameVVO_LABEL=Bulk Item Name Vvo
