--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -264,3 +264,5 @@ common.viwes.AR_AR_NOVVO_LABEL=Ar Ar Novvo
 common.viwes.Sec_Control_ValuesVVO_LABEL=Sec Control Values Vvo
 common.viwes.Bulk_IssueSlipNoVVO_LABEL=Bulk Issue Slip No Vvo
 common.viwes.Bulk_ItemNameVVO_LABEL=Bulk Item Name Vvo
+common.viwes.DummyVVO.toDate_FMT_FORMATTER=oracle.jbo.format.DefaultDateFormatter
+common.viwes.DummyVVO.toDate_FMT_FORMAT=MM/dd/yyyy
