--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -266,3 +266,5 @@ common.viwes.Bulk_IssueSlipNoVVO_LABEL=Bulk Issue Slip No Vvo
 common.viwes.Bulk_ItemNameVVO_LABEL=Bulk Item Name Vvo
 common.viwes.DummyVVO.toDate_FMT_FORMATTER=oracle.jbo.format.DefaultDateFormatter
 common.viwes.DummyVVO.toDate_FMT_FORMAT=MM/dd/yyyy
+model.inventory.views.BulkLabelPrintVO_LABEL=Bulk Label Print Vo
+model.production.views.ARwiseItemStockLedgerVO_LABEL=A Rwise Item Stock Ledger Vo
