Changes in report

--- a/ReportFactoryApp/Model/src/model/ModelBundle.properties
+++ b/ReportFactoryApp/Model/src/model/ModelBundle.properties
@@ -7,7 +7,6 @@ common.viwes.GlCodeVVO_LABEL=Gl Code Vvo
 common.Entities.UserSessionVO_LABEL=User Session Vo
 common.viwes.DBSidSeqVVO_LABEL=Db Sid Seq Vvo
 model.finance.views.SubLedgerTrialVO_LABEL=Sub Ledger Vvo
-LOV_UnitCode_LOVUIHints_NullValueId=--Select--
 model.production.views.WIPStockVO_LABEL=Wip Stock
 common.viwes.LocVVO_LABEL=Loc Vvo
 model.production.views.PendingFinishGoodsBatchWiseVO_LABEL=Pending Finish Goods Batch Wise Vo
@@ -268,3 +267,6 @@ common.viwes.DummyVVO.toDate_FMT_FORMATTER=oracle.jbo.format.DefaultDateFormatte
 common.viwes.DummyVVO.toDate_FMT_FORMAT=MM/dd/yyyy
 model.inventory.views.BulkLabelPrintVO_LABEL=Bulk Label Print Vo
 model.production.views.ARwiseItemStockLedgerVO_LABEL=A Rwise Item Stock Ledger Vo
+common.viwes.AR_AR_NOVVO.ItemName_LABEL=Item Code
+ALL=ALL
+PDF=PDF
